@startuml cls_modelos_orm

' ============================================================
' Estilo claro estandar — fondo blanco, fuente y lineas negras,
' rellenos pastel suaves. NO MODO OSCURO.
' Inyectado por docs/diagramas/plantuml/_normalizar_estilo_claro.py
' ============================================================
skinparam backgroundColor #FFFFFF
skinparam defaultFontColor #000000
skinparam defaultFontName "Helvetica"
skinparam defaultFontSize 12
skinparam shadowing false
skinparam roundCorner 6
skinparam ArrowColor #000000
skinparam ArrowFontColor #000000

' Notas: amarillo palido, texto negro, borde naranja oscuro.
skinparam noteBackgroundColor #FFF9CC
skinparam noteBorderColor #B5852E
skinparam noteFontColor #000000

' Titulos
skinparam titleFontColor #1F4E79
skinparam titleFontSize 14
skinparam titleFontStyle bold

' Divisores y headers
skinparam dividerBackgroundColor #F2F2F2
skinparam dividerFontColor #000000

' ─── Secuencia ───────────────────────────
skinparam sequence {
  ActorBackgroundColor #DAE8FC
  ActorBorderColor #000000
  ActorFontColor #000000
  ParticipantBackgroundColor #FFF2CC
  ParticipantBorderColor #000000
  ParticipantFontColor #000000
  LifeLineBorderColor #000000
  LifeLineBackgroundColor #FFFFFF
  ArrowColor #000000
  ArrowFontColor #000000
  GroupBackgroundColor #F2F2F2
  GroupHeaderFontColor #000000
  GroupBorderColor #000000
  ReferenceBackgroundColor #FFF9CC
  ReferenceBorderColor #B5852E
  ReferenceFontColor #000000
  DividerBackgroundColor #F2F2F2
  DividerFontColor #000000
}
skinparam activationBackgroundColor #FFF2CC
skinparam activationBorderColor #000000
skinparam databaseBackgroundColor #E1D5E7
skinparam databaseBorderColor #000000
skinparam databaseFontColor #000000

' ─── Actividad ───────────────────────────
skinparam activity {
  BackgroundColor #FFF2CC
  BorderColor #000000
  ArrowColor #000000
  FontColor #000000
  StartColor #000000
  EndColor #000000
  DiamondBackgroundColor #DAE8FC
  DiamondBorderColor #000000
  DiamondFontColor #000000
}
skinparam activityArrowColor #000000

' ─── Estados ─────────────────────────────
skinparam state {
  BackgroundColor #DAE8FC
  BorderColor #000000
  FontColor #000000
  ArrowColor #000000
  StartColor #000000
  EndColor #000000
}

' ─── Casos de uso ────────────────────────
skinparam usecase {
  BackgroundColor #FFF2CC
  BorderColor #000000
  ArrowColor #000000
  FontColor #000000
}
skinparam actor {
  BackgroundColor #DAE8FC
  BorderColor #000000
  FontColor #000000
}

' ─── Clases ──────────────────────────────
skinparam class {
  BackgroundColor #FFF2CC
  BorderColor #000000
  ArrowColor #000000
  FontColor #000000
  AttributeFontColor #000000
  StereotypeFontColor #595959
}
skinparam classAttributeIconSize 0
skinparam classBackgroundColor #FFF2CC
skinparam classBorderColor #000000

' ─── Componentes / paquetes ──────────────
skinparam component {
  BackgroundColor #D5E8D4
  BorderColor #000000
  ArrowColor #000000
  FontColor #000000
}
skinparam package {
  BackgroundColor #F2F2F2
  BorderColor #000000
  FontColor #000000
}
skinparam node {
  BackgroundColor #FFF2CC
  BorderColor #000000
  FontColor #000000
}
skinparam cloud {
  BackgroundColor #E1D5E7
  BorderColor #000000
  FontColor #000000
}

' ─── ER ──────────────────────────────────
skinparam entity {
  BackgroundColor #FFF2CC
  BorderColor #000000
  FontColor #000000
}

' ─── Rectangulos genericos ──────────────
skinparam rectangle {
  BackgroundColor #F8F8F8
  BorderColor #000000
  FontColor #000000
}

' ─── Interfaces ──────────────────────────
skinparam interface {
  BackgroundColor #FFF2CC
  BorderColor #000000
  FontColor #000000
}

' ============================================================
' Clases: Modelos ORM SQLAlchemy + Enums del dominio
' Ruta: docs/diagramas/plantuml/cls_modelos_orm.puml
'
' Las 4 entidades persistidas (usuarios_app, benchmark_evaluaciones,
' llm_responses, user_evaluations) y los 4 enums asociados
' (LLMProvider, TestCategory, SessionStatus, EstadoUsuarioApp).
' La vista de capas (repos + services + engine) esta en
' cls_capas_arquitectura.
' ============================================================

package "app.models.enums" {
  enum LLMProvider {
    claude
    openai
    gemini
    grok
  }
  enum TestCategory {
    razonamiento
    codigo
    creativa
    concretas
    traduccion
    resumen
    imagen
    libre
  }
  enum SessionStatus {
    pendiente
    en_curso
    completada
    fallida
    solicitud_borrado
  }
  enum EstadoUsuarioApp {
    pendiente_acceso
    habilitado
    pendiente_ampliar_tokens
  }
}

package "app.models (SQLAlchemy ORM)" {

  class UsuarioApp {
    + id : int <<PK>>
    + nick : str(100) <<UNIQUE>>
    + password_hash : str(255)  (bcrypt)
    + email : str(255)? <<UNIQUE>>
    + is_admin : bool = False
    + es_root : bool = False
    + estado : EstadoUsuarioApp
    + cuota_asignada : int = 0
    + consultas_usadas : int = 0
    + intentos_fallidos : int = 0
    + guia_vista : bool = False
    + created_at : datetime
    + updated_at : datetime
    --
    CHECK ck_admin_requires_email:
      NOT is_admin OR email IS NOT NULL
  }

  class BenchmarkEvaluacion {
    + id : int <<PK>>
    + nickname : str(100)
    + prompt : Text
    + category : TestCategory
    + es_generacion_imagen : bool
    + status : SessionStatus
    + texto_entrada : Text?
    + texto_entrada_autogenerado : bool = False
    + subcategoria_csv : str(150)?
    + similitud_jaccard_media : float?
    + created_at : datetime
    + completed_at : datetime?
    --
    + respuestas : list[LLMResponse]
  }

  class LLMResponse {
    + id : int <<PK>>
    + evaluacion_id : int <<FK>>
    + tarifa_id : int? <<FK>>  (ON DELETE RESTRICT)
    + provider : LLMProvider
    + model_name : str(100)
    + idioma_prompt : str(2) = 'es' CHECK('es','en')
    + response_text : Text?
    -- Metricas API --
    + input_tokens : int
    + input_tokens_cached : int = 0
    + output_tokens : int
    + tuvo_error : bool
    + error_message : Text?
    -- Metricas calculadas --
    + latency_ms : int
    + tokens_por_segundo : float
    + ratio_sal_ent : float
    + cost_usd : Numeric(12,8)
    + coste_por_100_palabras : Numeric(12,8)
    -- Metricas texto --
    + palabras : int
    + diversidad_lexica : float
    + parrafos : int
    -- Imagen --
    + imagen_miniatura : Text? (base64)
    + created_at : datetime
    --
    + benchmark : BenchmarkEvaluacion
    + evaluacion : UserEvaluation?
    + tarifa : TarifaLLM? (lazy=raise)
  }

  class TarifaLLM {
    + id : int <<PK>>
    + proveedor : LLMProvider
    + precio_entrada_usd_por_mtoken : Numeric(12,8)
    + precio_salida_usd_por_mtoken : Numeric(12,8)
    + precio_entrada_cacheado_usd_por_mtoken : Numeric(12,8)?
    + precio_imagen_generar_usd_por_imagen : Numeric(12,8)?  (txt2img)
    + precio_imagen_editar_usd_por_imagen : Numeric(12,8)?   (img2img)
    + vigente : bool = True
    + actualizado_en : datetime
    + actualizado_por : str(64)?
    --
    UNIQUE (proveedor) WHERE vigente = TRUE
    INDEX (proveedor, actualizado_en)
  }

  class UserEvaluation {
    + id : int <<PK>>
    + response_id : int <<FK, UNIQUE>>
    + nickname : str(100)
    + rating : SmallInt [0..5]
    + rango_preferencia : int?  [1..4]
    + created_at : datetime
    + updated_at : datetime
    --
    + respuesta : LLMResponse
  }
}

' ─── Relaciones ───────────────────────────────────
BenchmarkEvaluacion "1" *-- "1..*" LLMResponse : respuestas >
LLMResponse "1" o-- "0..1" UserEvaluation : evaluacion >
TarifaLLM "1" <-- "0..*" LLMResponse : tarifa aplicada >

BenchmarkEvaluacion ..> TestCategory
BenchmarkEvaluacion ..> SessionStatus
LLMResponse ..> LLMProvider
TarifaLLM ..> LLMProvider
UsuarioApp ..> EstadoUsuarioApp

note right of UsuarioApp
  3 tipos de usuario segun is_admin y es_root:
  - is_admin=False -> usuario web
  - is_admin=True, es_root=False -> admin promovido
  - is_admin=True, es_root=True -> admin root unico
  El usuario web se relaciona con benchmark_evaluaciones
  por `nickname` (no FK) preservando el modelo anonimo..
end note

note bottom of UserEvaluation
  UNIQUE(response_id) garantiza
  relacion 1:1 con LLMResponse.
  rating=0 = censura del modelo
  (distinto de "sin valorar").
  Solo el propietario (mismo nickname)
  puede insertar - RF-12,RF-13.
end note

note right of TarifaLLM
  Cada PUT del admin crea una nueva fila
  con vigente=TRUE y marca la anterior
  del mismo proveedor con vigente=FALSE.
  El indice unico parcial garantiza que
  haya exactamente una vigente por
  proveedor a nivel BD.

  LLMResponse.tarifa_id queda enlazado
  permanentemente a la version exacta
  que se cobro: cambiar la tarifa NO
  recalcula respuestas pasadas.

  Precision NUMERIC(12, 8) coherente con
  round(coste, 8) del calculo Python.
end note

note right of LLMResponse
  **Sub-experimento bilingue:**
  idioma_prompt = 'es' (default) o 'en'.
  En categorias razonamiento, creativa y
  concretas con prompt predefinido, una
  misma evaluacion produce 4 filas 'es' y
  4 filas 'en' (8 LLMResponse).
  El humano solo valora las 'es'; las 'en'
  alimentan la tarjeta comparativa del
  dashboard y la columna idioma_prompt
  del CSV de admin.
end note

@enduml
